--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,27 @@
 	<artifactId>Sathish_23_Sdet</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<description>Sathish_23_Sdet</description>
+	<properties>
+		<maven.compiler.target>1.17</maven.compiler.target>
+		<maven.compiler.source>1.17</maven.compiler.source>
+	</properties>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
-			<version>5.3.0</version>
+			<version>5.3.1</version>
+			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.5</version>
+			<version>7.8.0</version>
+			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>com.github.tomakehurst</groupId>
 			<artifactId>wiremock-jre8</artifactId>
