--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
 			<version>7.8.0</version>
 			<scope>test</scope>
 		</dependency>
+		<!--
+		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>4.11.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.github.tomakehurst</groupId>
