--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 			<version>2.35.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version> <!-- Use the latest version -->
+		</dependency>
 
 	</dependencies>
 </project>
